<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">G-licious</string>
    <string name="app_url">http://nutrition.grinnell.edu/NetNutrition/1</string>
    <string name="title_dish_detail">Dish Information</string>
    <string name="title_menu">G-licious</string>
    <string name="menu_date">Select Date</string>
    <string name="title">G-licious</string>
    <string name="serv_size_string">Serving Size:</string>
    <string name="dialog_message">G-licious is temporarily a portal for Grinnell Dining\'s Net Nutrition! We\'re looking into ways to bring the old G-licious back, but in the meantime, please enjoy this convenient method to check the daily menu for the D-hall.</string>
    <string name="settingstitle">Filters and Settings</string>
    <string name="refresh">Refresh</string>
    <string name="chooseDate">Select Date</string>
    <string name="dietconst">Dietary Considerations</string>
    <string name="veganpref">Vegan</string>
    <string name="ovolactopref">Ovolacto</string>
    <string name="ovolactoprefsummary">Also show items safe for a vegetarian diet.</string>
    <string name="veganprefsummary">Show only items safe for a vegan diet.</string>
    <string name="noMenuContent">No Menu Information Available )= </string>
    <string name="noNutrition">No Nutrition Information Available 0_o</string>
    <string name="noNetworkMessage">No network connection could be established.  Please make sure Airplane Mode is OFF and your Data/Network connection is turned ON.</string>
    <string name="settings">Settings</string>
    <string name="noRoute">The meal server could not be reached.  Please try again later.</string>
    <string name="httpError">Unable to retrieve any menu data.  Please try again later.</string>
    <string name="noMealContent">No information is available for the requested date.</string>
    <string name="pleaseTryAgain">Please try again later.</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_browser">BrowserActivity</string>

</resources>